--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "type": "module",
   "dependencies": {
     "@apollo/server": "^4.10.0",
+    "@google-cloud/vertexai": "^0.2.1",
     "dotenv": "^16.3.1",
     "graphql": "^16.8.1"
   },
