--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "graphql": "^16.8.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/node": "^20.11.3",
     "typescript": "^5.3.3"
   }
