--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "generate": "graphql-codegen --config codegen.ts",
     "compile": "npm run generate && tsc",
-    "start": "npm run compile && node ./dist/index.js",
-    "codegen": "graphql-codegen --config codegen.ts"
+    "start": "npm run compile && node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
