--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "generate": "graphql-codegen --config codegen.ts",
     "compile": "npm run generate && tsc",
-    "start": "npm run compile && node ./dist/index.js"
+    "start": "npm run compile && node ./dist/index.js",
+    "test": "npm run compile && jest --watchAll --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -18,15 +19,18 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "graphql": "^16.8.1"
+    "graphql": "^16.8.1",
+    "jest": "^29.7.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.0",
+    "@graphql-codegen/introspection": "4.0.0",
     "@graphql-codegen/typescript": "4.0.1",
     "@graphql-codegen/typescript-resolvers": "4.0.1",
     "@types/cors": "^2.8.17",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.11.3",
-    "typescript": "^5.3.3",
-    "@graphql-codegen/introspection": "4.0.0"
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.3"
   }
 }
