--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "module": "esnext",
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "types": ["node"],
+    "types": ["node", "jest"],
     "strict": true
-  }
+  },
+  "exclude": ["**/**/*.test.ts"]
 }
