--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.3",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
