Change path output for generated codegen file

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "generate": "graphql-codegen --config codegen.ts",
+    "generate": "graphql-codegen --config ./src/codegen.ts",
     "compile": "npm run generate && tsc",
     "start": "npm run compile && node ./dist/index.js",
     "test": "npm run compile && jest --watchAll --detectOpenHandles"
